--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-# network-domains.github.io
+!DOCTYPE html>
+<html>
+    <head>      
+        <!-- head definitions go here -->
+        <title>Example</title>
+    </head>
+    <body>
+       <!-- the content goes here -->
+        <p>This is an example of a simple HTML page with one paragraph.</p>
+    </body>
+</html>
